--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.9",
     "discord.js": "^12.5.3",
-    "node-html-to-image": "^3.1.0"
+    "puppeteer": "^10.0.0",
+    "puppeteer-cluster": "^0.22.0"
   }
 }
